// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should disable access key id field 1`] = `
<Fragment>
  <ConnectionConfig
    onOptionsChange={[MockFunction]}
    options={
      Object {
        "access": "proxy",
        "basicAuth": false,
        "basicAuthUser": "",
        "database": "",
        "id": 1,
        "isDefault": true,
        "jsonData": Object {
          "assumeRoleArn": "",
          "authType": "keys",
          "customMetricsNamespaces": "",
          "database": "",
          "defaultRegion": "us-east-2",
          "externalId": "",
          "timeField": "@timestamp",
        },
        "name": "CloudWatch",
        "orgId": 1,
        "readOnly": false,
        "secureJsonData": Object {
          "accessKey": "",
          "secretKey": "",
        },
        "secureJsonFields": Object {
          "accessKey": false,
          "secretKey": false,
        },
        "type": "cloudwatch",
        "typeLogoUrl": "",
        "typeName": "Cloudwatch",
        "uid": "z",
        "url": "",
        "user": "",
        "withCredentials": false,
      }
    }
    secureJsonFields={
      Object {
        "secretKey": true,
      }
    }
  >
    <InlineField
      label="Namespaces of Custom Metrics"
      labelWidth={28}
      tooltip="Namespaces of Custom Metrics."
    >
      <Input
        onChange={[Function]}
        placeholder="Namespace1,Namespace2"
        value=""
        width={60}
      />
    </InlineField>
  </ConnectionConfig>
  <h3
    className="page-heading"
  >
    CloudWatch Logs
  </h3>
  <div
    className="gf-form-group"
  >
    <InlineField
      invalid={false}
      label="Timeout"
      labelWidth={28}
      tooltip="Custom timeout for CloudWatch Logs insights queries which have max concurrency limits. Default is 15 minutes. Must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
    >
      <Input
        onChange={[Function]}
        placeholder="15m"
        title="The timeout must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
        value=""
        width={60}
      />
    </InlineField>
    <InlineField
      label="Default Log Groups"
      labelWidth={28}
      tooltip="Optionally, specify default log groups for CloudWatch Logs queries."
    >
      <LogGroupSelector
        onChange={[Function]}
        onOpenMenu={[Function]}
        region="us-east-2"
        saved={false}
        selectedLogGroups={Array []}
        width={60}
      />
    </InlineField>
  </div>
  <XrayLinkConfig
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Render should render component 1`] = `
<Fragment>
  <ConnectionConfig
    onOptionsChange={[MockFunction]}
    options={
      Object {
        "access": "proxy",
        "basicAuth": false,
        "basicAuthUser": "",
        "database": "",
        "id": 1,
        "isDefault": true,
        "jsonData": Object {
          "assumeRoleArn": "",
          "authType": "keys",
          "customMetricsNamespaces": "",
          "database": "",
          "defaultRegion": "us-east-2",
          "externalId": "",
          "timeField": "@timestamp",
        },
        "name": "CloudWatch",
        "orgId": 1,
        "readOnly": false,
        "secureJsonData": Object {
          "accessKey": "",
          "secretKey": "",
        },
        "secureJsonFields": Object {
          "accessKey": false,
          "secretKey": false,
        },
        "type": "cloudwatch",
        "typeLogoUrl": "",
        "typeName": "Cloudwatch",
        "uid": "z",
        "url": "",
        "user": "",
        "withCredentials": false,
      }
    }
  >
    <InlineField
      label="Namespaces of Custom Metrics"
      labelWidth={28}
      tooltip="Namespaces of Custom Metrics."
    >
      <Input
        onChange={[Function]}
        placeholder="Namespace1,Namespace2"
        value=""
        width={60}
      />
    </InlineField>
  </ConnectionConfig>
  <h3
    className="page-heading"
  >
    CloudWatch Logs
  </h3>
  <div
    className="gf-form-group"
  >
    <InlineField
      invalid={false}
      label="Timeout"
      labelWidth={28}
      tooltip="Custom timeout for CloudWatch Logs insights queries which have max concurrency limits. Default is 15 minutes. Must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
    >
      <Input
        onChange={[Function]}
        placeholder="15m"
        title="The timeout must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
        value=""
        width={60}
      />
    </InlineField>
    <InlineField
      label="Default Log Groups"
      labelWidth={28}
      tooltip="Optionally, specify default log groups for CloudWatch Logs queries."
    >
      <LogGroupSelector
        onChange={[Function]}
        onOpenMenu={[Function]}
        region="us-east-2"
        saved={false}
        selectedLogGroups={Array []}
        width={60}
      />
    </InlineField>
  </div>
  <XrayLinkConfig
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Render should show access key and secret access key fields 1`] = `
<Fragment>
  <ConnectionConfig
    jsonData={
      Object {
        "authType": "keys",
      }
    }
    onOptionsChange={[MockFunction]}
    options={
      Object {
        "access": "proxy",
        "basicAuth": false,
        "basicAuthUser": "",
        "database": "",
        "id": 1,
        "isDefault": true,
        "jsonData": Object {
          "assumeRoleArn": "",
          "authType": "keys",
          "customMetricsNamespaces": "",
          "database": "",
          "defaultRegion": "us-east-2",
          "externalId": "",
          "timeField": "@timestamp",
        },
        "name": "CloudWatch",
        "orgId": 1,
        "readOnly": false,
        "secureJsonData": Object {
          "accessKey": "",
          "secretKey": "",
        },
        "secureJsonFields": Object {
          "accessKey": false,
          "secretKey": false,
        },
        "type": "cloudwatch",
        "typeLogoUrl": "",
        "typeName": "Cloudwatch",
        "uid": "z",
        "url": "",
        "user": "",
        "withCredentials": false,
      }
    }
  >
    <InlineField
      label="Namespaces of Custom Metrics"
      labelWidth={28}
      tooltip="Namespaces of Custom Metrics."
    >
      <Input
        onChange={[Function]}
        placeholder="Namespace1,Namespace2"
        value=""
        width={60}
      />
    </InlineField>
  </ConnectionConfig>
  <h3
    className="page-heading"
  >
    CloudWatch Logs
  </h3>
  <div
    className="gf-form-group"
  >
    <InlineField
      invalid={false}
      label="Timeout"
      labelWidth={28}
      tooltip="Custom timeout for CloudWatch Logs insights queries which have max concurrency limits. Default is 15 minutes. Must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
    >
      <Input
        onChange={[Function]}
        placeholder="15m"
        title="The timeout must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
        value=""
        width={60}
      />
    </InlineField>
    <InlineField
      label="Default Log Groups"
      labelWidth={28}
      tooltip="Optionally, specify default log groups for CloudWatch Logs queries."
    >
      <LogGroupSelector
        onChange={[Function]}
        onOpenMenu={[Function]}
        region="us-east-2"
        saved={false}
        selectedLogGroups={Array []}
        width={60}
      />
    </InlineField>
  </div>
  <XrayLinkConfig
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Render should show arn role field 1`] = `
<Fragment>
  <ConnectionConfig
    jsonData={
      Object {
        "authType": "arn",
      }
    }
    onOptionsChange={[MockFunction]}
    options={
      Object {
        "access": "proxy",
        "basicAuth": false,
        "basicAuthUser": "",
        "database": "",
        "id": 1,
        "isDefault": true,
        "jsonData": Object {
          "assumeRoleArn": "",
          "authType": "keys",
          "customMetricsNamespaces": "",
          "database": "",
          "defaultRegion": "us-east-2",
          "externalId": "",
          "timeField": "@timestamp",
        },
        "name": "CloudWatch",
        "orgId": 1,
        "readOnly": false,
        "secureJsonData": Object {
          "accessKey": "",
          "secretKey": "",
        },
        "secureJsonFields": Object {
          "accessKey": false,
          "secretKey": false,
        },
        "type": "cloudwatch",
        "typeLogoUrl": "",
        "typeName": "Cloudwatch",
        "uid": "z",
        "url": "",
        "user": "",
        "withCredentials": false,
      }
    }
  >
    <InlineField
      label="Namespaces of Custom Metrics"
      labelWidth={28}
      tooltip="Namespaces of Custom Metrics."
    >
      <Input
        onChange={[Function]}
        placeholder="Namespace1,Namespace2"
        value=""
        width={60}
      />
    </InlineField>
  </ConnectionConfig>
  <h3
    className="page-heading"
  >
    CloudWatch Logs
  </h3>
  <div
    className="gf-form-group"
  >
    <InlineField
      invalid={false}
      label="Timeout"
      labelWidth={28}
      tooltip="Custom timeout for CloudWatch Logs insights queries which have max concurrency limits. Default is 15 minutes. Must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
    >
      <Input
        onChange={[Function]}
        placeholder="15m"
        title="The timeout must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
        value=""
        width={60}
      />
    </InlineField>
    <InlineField
      label="Default Log Groups"
      labelWidth={28}
      tooltip="Optionally, specify default log groups for CloudWatch Logs queries."
    >
      <LogGroupSelector
        onChange={[Function]}
        onOpenMenu={[Function]}
        region="us-east-2"
        saved={false}
        selectedLogGroups={Array []}
        width={60}
      />
    </InlineField>
  </div>
  <XrayLinkConfig
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Render should show credentials profile name field 1`] = `
<Fragment>
  <ConnectionConfig
    jsonData={
      Object {
        "authType": "credentials",
      }
    }
    onOptionsChange={[MockFunction]}
    options={
      Object {
        "access": "proxy",
        "basicAuth": false,
        "basicAuthUser": "",
        "database": "",
        "id": 1,
        "isDefault": true,
        "jsonData": Object {
          "assumeRoleArn": "",
          "authType": "keys",
          "customMetricsNamespaces": "",
          "database": "",
          "defaultRegion": "us-east-2",
          "externalId": "",
          "timeField": "@timestamp",
        },
        "name": "CloudWatch",
        "orgId": 1,
        "readOnly": false,
        "secureJsonData": Object {
          "accessKey": "",
          "secretKey": "",
        },
        "secureJsonFields": Object {
          "accessKey": false,
          "secretKey": false,
        },
        "type": "cloudwatch",
        "typeLogoUrl": "",
        "typeName": "Cloudwatch",
        "uid": "z",
        "url": "",
        "user": "",
        "withCredentials": false,
      }
    }
  >
    <InlineField
      label="Namespaces of Custom Metrics"
      labelWidth={28}
      tooltip="Namespaces of Custom Metrics."
    >
      <Input
        onChange={[Function]}
        placeholder="Namespace1,Namespace2"
        value=""
        width={60}
      />
    </InlineField>
  </ConnectionConfig>
  <h3
    className="page-heading"
  >
    CloudWatch Logs
  </h3>
  <div
    className="gf-form-group"
  >
    <InlineField
      invalid={false}
      label="Timeout"
      labelWidth={28}
      tooltip="Custom timeout for CloudWatch Logs insights queries which have max concurrency limits. Default is 15 minutes. Must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
    >
      <Input
        onChange={[Function]}
        placeholder="15m"
        title="The timeout must be a valid duration string, such as \\"15m\\" \\"30s\\" \\"2000ms\\" etc."
        value=""
        width={60}
      />
    </InlineField>
    <InlineField
      label="Default Log Groups"
      labelWidth={28}
      tooltip="Optionally, specify default log groups for CloudWatch Logs queries."
    >
      <LogGroupSelector
        onChange={[Function]}
        onOpenMenu={[Function]}
        region="us-east-2"
        saved={false}
        selectedLogGroups={Array []}
        width={60}
      />
    </InlineField>
  </div>
  <XrayLinkConfig
    onChange={[Function]}
  />
</Fragment>
`;
